[package]
name = "trellolon"
version = "0.1.0"
edition = "2021"
authors = ["Moran"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.56"
async-trait = "0.1.52"
lazy_static = "1.4.0"
